Added last seen, deleted, registered date-count methods
